manifests/homeassistant/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - image: webwurst/homeassistant:0.37.1
        name: homeassistant
        ports:
        - containerPort: 8123
        # - name: admin
        #   containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /etc/homeassistant
        # - name: data
        #   mountPath: /var/lib/influxdb
      volumes:
      - name: config
        configMap:
          name: homeassistant
      # - name: data
      #   hostPath:
      #     path: /srv/influxdb-data
      hostNetwork: true
