manifests/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  ports:
  - port: 8123
    # name: ui
    # targetPort: ui
  selector:
    app: homeassistant
